fixed the screen overflow

--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ div {
     box-shadow: inset 0 0 10px rgb(37, 37, 37);
     color: white;
     font-size: 20px;
+
+    overflow-x: hidden;
 }
 
 .screenUp {
